# agent-shell-tools

./: .bazelrc  .gitignore  MODULE.bazel  README.md  go.mod  go.sum  tools.go
.github/workflows/: ci.yml
command_filter/: LANGUAGE.md
exec_service/: BUILD.bazel  exec_service.proto
exec_service/cmd/exec_client/: BUILD.bazel  exec_client_test.go  main.go
exec_service/cmd/exec_server/: BUILD.bazel  exec_server_test.go  main.go
exec_service/server/: BUILD.bazel  server.go  server_test.go
mcpmux/: BUILD.bazel  README.md  SPEC.md  child_test.go
mcpmux/cmd/mcpmux/: BUILD.bazel  main.go
mcpmux/integration/: BUILD.bazel  proxy_test.go
mcpmux/test/crashserver/: BUILD.bazel
mcpmux/test/echoserver/: BUILD.bazel
mcpmux/test/echoserver_v2/: BUILD.bazel
pktexec/: BUILD.bazel  DESIGN.md  pktexec.rs  pktexec_test.rs  pktexecd.rs  wire.rs
sandbox/: BUILD.bazel  jail.txtpb  main.rs  run_jail.cc  run_jail.h  sandbox_test.rs
wsb/: BUILD.bazel  main.rs  wsb_test.rs
