# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "agent-tools",
    version = "0.0.1",
)

# --- C++ Toolchain -------------------------------------------------------

bazel_dep(name = "toolchains_chromium", version = "0.0.1", dev_dependency = True)
git_override(
    module_name = "toolchains_chromium",
    commit = "1cc2c49e1e120e42349ad643dc3e09cda2f2fbcb",
    remote = "https://github.com/google/toolchains_chromium",
)

chromium = use_extension("@toolchains_chromium//:extensions.bzl", "chromium", dev_dependency = True)
chromium.toolchain(name = "chromium_toolchain")
use_repo(chromium, "chromium_toolchain")

register_toolchains(
    "@chromium_toolchain//:all",
    dev_dependency = True,
)

# --- Rust Toolchain ------------------------------------------------------

bazel_dep(name = "rules_rust", version = "0.69.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2024")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# --- Rust Crate Dependencies ---------------------------------------------

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4",
)
crate.spec(
    package = "libc",
    version = "0.2",
)
crate.spec(
    package = "prost",
    version = "0.13",
)
crate.spec(
    features = ["text-format"],
    package = "prost-reflect",
    version = "0.14",
)
crate.spec(
    package = "protoc-gen-prost",
    version = "0.4",
)
crate.annotation(
    crate = "protoc-gen-prost",
    gen_binaries = ["protoc-gen-prost"],
)
crate.spec(
    package = "anyhow",
    version = "1",
)
crate.spec(
    package = "googletest",
    version = "0.14",
)
crate.spec(
    features = ["derive"],
    package = "serde",
    version = "1",
)
crate.spec(
    package = "sha2",
    version = "0.10",
)
crate.spec(
    package = "tempfile",
    version = "3",
)
crate.spec(
    package = "toml",
    version = "0.8",
)
crate.from_specs(name = "crates")
use_repo(crate, "crates")

# --- Build Dependencies --------------------------------------------------

bazel_dep(name = "nsjail", version = "0.0.1")
git_override(
    module_name = "nsjail",
    commit = "a2d56f4420b0503da48b568a50005a74291c21fd",
    init_submodules = True,
    remote = "https://github.com/afq984/nsjail",
)

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.4")

# --- Go Toolchain --------------------------------------------------------

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.7")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Many of siso's transitive Bazel-aware deps (luci, remote-apis, reclient/api,
# ...) ship hand-written BUILD files that reference @rules_go / @rules_proto
# via names that aren't visible in our bzlmod context. Force gazelle to
# regenerate BUILD files for every external Go module and skip proto-rule
# generation entirely (compile the checked-in .pb.go files via plain
# go_library).
go_deps.gazelle_default_attributes(
    build_file_generation = "clean",
    directives = ["gazelle:proto disable_global"],
)

use_repo(
    go_deps,
    "com_github_modelcontextprotocol_go_sdk",
    "org_chromium_go_build_siso",
    "org_chromium_go_luci",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
