# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "wsb",
    srcs = ["main.rs"],
    data = [
        "//grpc_exec/cmd/grpc_execd",
        "//sandbox:sandbox",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:clap",
        "@crates//:libc",
        "@crates//:serde",
        "@crates//:sha2",
        "@crates//:toml",
    ],
)

rust_test(
    name = "wsb_test",
    srcs = ["wsb_test.rs"],
    data = [
        ":wsb",
        "//grpc_exec/cmd/grpc_exec",
        "//grpc_exec/cmd/grpc_execd",
        "//sandbox:sandbox",
    ],
    env = {
        "WSB_BIN": "$(rootpath :wsb)",
        "GRPC_EXEC_BIN": "$(rootpath //grpc_exec/cmd/grpc_exec)",
    },
    env_inherit = ["HOME"],
    tags = ["local"],
    deps = [
        "@crates//:googletest",
        "@crates//:libc",
    ],
)
